...
            endDate = semesterEnd,
            firstWeekType = WeekType.A
        )
    )

    val computerScienceId = semesterRepository.saveStudyProgram(
        StudyProgramRecord(name = "Informatyka", color = "#137B71")
    )
    val managementId = semesterRepository.saveStudyProgram(
        StudyProgramRecord(name = "Zarządzanie", color = "#334FCE")
    )
    val computerScienceProgramId = semesterRepository.saveSemesterProgram(
        SemesterProgramRecord(
...
